--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,65 +1,65 @@
-#ENC[AES256_GCM,data:Hn4liyi9K/wu5zEd,iv:38x9cHDVUsP9Vf9rwvJaKLZqnr/mtmwyJrCaw36GRyQ=,tag:T1bgAwdthI2/ahSs98Q1zQ==,type:comment]
-PROXMOX_IP: ENC[AES256_GCM,data:sY1AbUOoCCo7wOs=,iv:Ndl8xIkCmi8fDaZA1afJvunYo+M3P15dAT/zdmbRnbo=,tag:j6VmZFTCi4Pvw5utTj20pw==,type:str]
-VIP: ENC[AES256_GCM,data:wfgied2/jLXI2tw=,iv:LSfVyj4VsH+LQioPgXj8pxQe+F706o5KFow78WTNujY=,tag:3NBghmUGrkJiWUvtdkbE/g==,type:str]
-MASTER1IP: ENC[AES256_GCM,data:ZQnBRnyoUcXNw98=,iv:cvA4wbsQHqLL+tlC6mkYS1lEll4SVhAQLnGyrmCb6R8=,tag:MyUVca9V7xNN4nASKveHbw==,type:str]
-GATEWAY: ENC[AES256_GCM,data:QEggW32xIGbaEQ==,iv:+WVcZo6SZ2B82lGDfysuDChc/hHc/bVD+IITqmJgg+Y=,tag:h6lGxiUNAFF0BzVGepxvkg==,type:str]
-#ENC[AES256_GCM,data:OrvxLmC27adNEXzWP1zI,iv:4iUnAgqTHDZ/l9ECIGXCKN7fymD11w+pwqP4t7/zwIQ=,tag:n3Skn74g7bEN2avnuGEGcA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:YRO0SMnaQ/Ft34dizBzEycMBqSE0EMbuFQ==,iv:Bsl/BbJbAVAqoTTAj4Mg2U0XmCdxfmmatEdCN+HmFdE=,tag:oTREWj7CmH+X/Qfg8j6DRw==,type:str]
-#ENC[AES256_GCM,data:L1ZDaYaSDvsXLgh0RvVIzpJ4TS6RkHGYGw==,iv:H/7I+gEtW9sLjlGNlluJsH1W7kZLsHw9U0d2ZxfKBNk=,tag:gRPDTHYVhpz/q+OwGS0LPw==,type:comment]
-NGINX_INTERNAL_IP: ENC[AES256_GCM,data:fQMqWTAS95fYd3kG,iv:/u+werFXBwaO6HAlfmCOvGQP3etUmxncUUh0kOB8ceQ=,tag:wEHzEyZukxl7dyhHEicU2g==,type:str]
-NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:OkHNkJOYhNo5hk19,iv:UtLVvbCd7dZF99Zb8Cq8QPIsrRr09E3kKITPW4vKcnc=,tag:QvEqo0JS/9TDVHwfbsGveA==,type:str]
-IP_WHITELIST: ENC[AES256_GCM,data:cbQBwy0cpPaMjGx19lMtkrq7Yz4mlt8K0bU=,iv:rnC3odwQj3T3+Shf7xwz7tJCuGdiIUotXDzCnaEgWR4=,tag:tOVc8+K45qdIiwgeJyo4gA==,type:str]
-BLOCKY_IP: ENC[AES256_GCM,data:fJNGMa65034k3z1X,iv:hqUe4AMBy8Ri58qNaTySdpnfB6aLVdsJziUvO1GSlN4=,tag:N7XL7A7fva13NnrxG4rZdw==,type:str]
-DASHBOARD_IP: ENC[AES256_GCM,data:MhFesu2+HUKvmZro,iv:UP7j1DzMhP4fomr8v/YjKeunYbIoIcu0PruaJLRNfDA=,tag:hyWenkkKtmmvlKQ1kaLbqA==,type:str]
-WG_EASY_IP: ENC[AES256_GCM,data:KlAfhoaxE3FRjLvx,iv:bpcV7SX8MnAqu0ZyfwmClOdpJRDACLb8zFTB6RQxOKw=,tag:Guxd30yTfJu+pZtFEXdZIQ==,type:str]
-MINECRAFT_IP: ENC[AES256_GCM,data:wCZVnhDwYixMMI5Y,iv:DWFJdFb+KJ/HEAtyAAHnhSnHDabQi/X+VV9HDyUQJnQ=,tag:SEOfyKgVMVrs3LzpkvfeNQ==,type:str]
-#ENC[AES256_GCM,data:dzpGn44okIR60/OgZ0QE3A1D,iv:7SUmA9veONs1uzmYHd5TQsthMK3w2rhrvOul4jd2NyA=,tag:gxiFQ9P+bt4nyXWa+xYrPA==,type:comment]
-BOREALIS_IP: ENC[AES256_GCM,data:ZFpkEfHPVRHlONQ=,iv:QV2tygicKkrzh2xW4PeAyABJujEKCzn+GM502SAKWR8=,tag:n9o76G2t689pmSszzGLofg==,type:str]
-#ENC[AES256_GCM,data:ODEZEJyRxHyg2owGVsglFQ==,iv:hkqafIiDv1WBc1CUE1iqSyRW9l+pd8Qv0XWUl0zw6CE=,tag:Mp16IdX8oVac4zjTaB/lZA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:xRTHYtqmC5NiZIrRdg==,iv:qmiQ3dppCKhxvPr+No5dK3Te4GSajfeNRVOpVM4jMGU=,tag:w6dRwhZkYZnKuQZmH9LRMQ==,type:str]
-DDNS_URL: ENC[AES256_GCM,data:usQFb1AgnGkd+N3onIq4cSJ7lIY=,iv:ZLNOfxvFKwZ8AQtyMPENFZkQ80jP9Bq20wRsaKzlVqg=,tag:ed4xk9m8tzvxJ4ogzBjcBQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:6kOELnqZfRnSoTERa4TISLMMwA==,iv:WYCMFgDNAxusPUqznlXXisXxJ3cg/3IUaEiP+shNc1s=,tag:rnBwGjOKugy3uY12NXqV2g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Uyw10/RNiehKkmFgzSNG5irylalzyUepyvaY4sYr2Irry2mmXO32VQ==,iv:2Ixv3PKmAxLIOv7NiCwROdZaZAVxnK8J9U9T4KM8iuc=,tag:g05BEQO1F6kwrkpEl/PLlQ==,type:str]
-ZONE_ID: ENC[AES256_GCM,data:9iLvSYj6Lm4j5BuwLfbdiIiwIEnYezLz9lgMZV7cpKg=,iv:pusfutO+pvWA4wvPeTFCvIm7+jBWlfIZifWFHVJ/X+g=,tag:+dvYzkE1/9YRubbctQ9KvA==,type:str]
-#ENC[AES256_GCM,data:2MfYCXPLO/s=,iv:suTlOqaMFZSvXQGf6KdnGPGq8y0Oh+2UkBwBZPRGmUQ=,tag:6SwGn2vqaiGmZAD6ikzjZQ==,type:comment]
-GF_ADMIN: ENC[AES256_GCM,data:ILfLxTYMhxxw,iv:JdRqOljkyegKolYaBaGBKN25v4xJfW1Gga6EFZGlNvY=,tag:O+GRp47+z+NZ9mccEoHz5w==,type:str]
-GF_PWD: ENC[AES256_GCM,data:998T5FpquC3tqmUGBNEp0TVLeYGcosKP,iv:fAoDSNweRnvyL8GiV9RkCsUk9kvsTQGG3Iei8Pyh6Zk=,tag:8H4wEP3v8RY/fETmMmJ6aQ==,type:str]
-#ENC[AES256_GCM,data:yg7lbi1+aZkhvQ==,iv:NHeJ1zNJ+7gFm3OQC7MW64V86Rx2/uDODmCXg4/jKpc=,tag:IpDF8eh++UujAMSo55L4Yg==,type:comment]
-NEXTCLOUD_USER: ENC[AES256_GCM,data:JbGZADB+Z16S,iv:dEJnn1sfLXTH2bO1LEAsgE1n1Ui18yTEVZaM4nCyUK8=,tag:9taV9o/M9y4uxviR1+bQdg==,type:str]
-NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:SMyFn4rXHKXVT8tYlyAR3itZ/gY=,iv:4Kp37cWCt3XGQ4Lrwa9X3CMJZi8jbmOBKcPXFyDyp3U=,tag:WCjQszi6F66pDWuuUR5wsw==,type:str]
-NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:GWA7bWSSbSMNyuILfhTESTK4y3YQrvD3,iv:06x8pHPHlK2ZHpbRf4LMToxTrWmk9xZxGJ8m2jF2xPE=,tag:VQ+coe+E2NU+8cpnQrzE0Q==,type:str]
-MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:zGkCMFB8nAYLlnL4dcQbZh25zg==,iv:BHxr4dDM0Lzdvh5/ZYChmN9/1sleJky2IHcnKdC8qXM=,tag:8vy/1fLQKk3l9lquLOG+yg==,type:str]
-SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:De+JBMNwtvu+LH4YKtXpAOgB,iv:tX4xuTRWciDZtY0Nd1m3l8viFevX929ZVLvMKoC0FlE=,tag:ho0SmjuwMFdyELqSEE1VbQ==,type:str]
-SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:1gJBhFuL321s2RlA3Chb2LcTBne5DCE=,iv:y9ovBanLM19YsBjVC1sh0ICNE/J7fZ8drIkNCpIxPVY=,tag:PHSmZqE3sx6SV/75j/gGbg==,type:str]
-HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:dH6t4C5nklatDhXG5RKS77ey/lcaImXV,iv:5Gj5+NXHyrv0JEfNllXrhJsZusvB82D7WW1udUsKdhE=,tag:h4K66C3thkaJJQmjIOOZhA==,type:str]
-SEARXNG_NFS_PATH: ENC[AES256_GCM,data:7mUuHuXuHp7RdpK34dCXUQ08BESBAXde,iv:hfQFQyP/nUGtB9rSU/uSAC+f/9RniW+TuVAA6sU2ydk=,tag:fjHXRMW8dxYJoxPcth7VfQ==,type:str]
-#ENC[AES256_GCM,data:vTBh0WiA85rClGTS+08x8H0=,iv:Gzj/r02bWE0U76smFd4Ns9YPqBlCynnMNj96G+2rAv0=,tag:kD2ZGtlFT8unGpmfjcd0tA==,type:comment]
-METUBE_NFS_PATH: ENC[AES256_GCM,data:G10Z57sR0XR1ibl/dmQSobigNE7eebOTBgc=,iv:8/JiTW40SB6tw6lQj7ct5oGpEMgE3QXW4ZjHJRWOCFw=,tag:hbHBNXpRHLZhKrs+eQXKFg==,type:str]
-VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:XlhtX/Pbphghu2MwYkPnFscCkQSTSlfxiQsY4jGSxFhykqdwduOA,iv:VFHB+bVV6dxwBoQ310Etb45wDbgI6ZWKpHvxArURUj8=,tag:tORAe6KKAHgMM7vB1o7FDQ==,type:str]
-OZRATES_NFS_PATH: ENC[AES256_GCM,data:9SfUpNzQGYigrBKos28NNOyab1vwLXDniuI+lzY=,iv:z+4xh6fqyXtIzAM0c25UesS8OFTOzt8Gk/C0Tamy9cM=,tag:1S2ki77KEo3sg3ThnUrITQ==,type:str]
-#ENC[AES256_GCM,data:bbbe1DszhWLDgXjxGJs1hyNrMu/zK3k7SEeW41vcP+R1vieAQxhfqjqLv7Lvz+iSE3ldDQBaR2o=,iv:MYWVvKBQlM5Xb1VGupbZEgaCop9wVKIiEIxC0lPIx7g=,tag:xuNWdNFPj9N0J96D9pNyNg==,type:comment]
-#ENC[AES256_GCM,data:ENOHWnTMexfTGGZCZqxpWZkG7b/hjCInfQ==,iv:eH5jSrKju2EvUDNMC9+LJO9/vDZP/omwTuCfhvFmVGA=,tag:8QNXpaZvp4E/4bNZy23wkg==,type:comment]
-#ENC[AES256_GCM,data:axspGRwtof9GbAZeS/kPEpsF83C9qmENJaR8X5y/XyyVn2ZfnLJ5ESCBmGl94JfraE7Nzaly69ELA03n6PF9zyoP9+idnqSI3YezcD4=,iv:hlfe3XGiklro4h8AjK4ulT+MX+ERQx+TViLHMPqadN4=,tag:WmJqzECrF5yxhJG/2Q5V/w==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:pxcrCEl4na6XaDTCGzLfQagNAogCpf/s7QKAIOWsNGXVir5Rv1kyFpSLVw==,iv:xf6rZZcFISfY3f947MJJWSGkcCFR9+soehK9U1TfACI=,tag:2UHyRPLieQ8iA5th8IsXew==,type:str]
-#ENC[AES256_GCM,data:GnqBR/vSGp2BGIh2vftSE6xbsMz9XvXxFTK0PQF46zXkxCSlk9LQFk+j43j7zjHRzw+JRFLSO4YGzBoZ56zNT1pgMfKoxJ0=,iv:/AlmQ1l7u99Lam36QGcXrXmL9ab7wG4tiRrYAbhLtOI=,tag:vnCL31s2qBkBiaa6lrEMmw==,type:comment]
-#ENC[AES256_GCM,data:SbKqyJV0NzC50EHSoPd+siRgjsviz7m22CrOuOwdDDLZQH+kNuJp8iuufIu2H1zx/+pLssFv,iv:ILEOXCNJSCF7mvTKYZllNAM9k87d937VYHXqb02jEB0=,tag:OF/mEv0HtoBD/EuDSkdhLQ==,type:comment]
-#ENC[AES256_GCM,data:xn9zlNiv837Ayt2PTaCadqUZiNFrOn82lNNuL1cbnEzDCZw=,iv:Ioil8BuOoZyGhDDqOOFkee6eNe4t4re/kn87pue9Nzg=,tag:BBcrN9lmTwUUequzr3ZqqQ==,type:comment]
-#ENC[AES256_GCM,data:1MTjh5XSS46j5XT9UxdLZoBfFcG4pZHv69+7lKSkgpTGtFIwYVqT,iv:gVWle5u+dg4JSdzL7y1TPR/NGbskr2HiWAPlrr0Aklw=,tag:KG38wUGJ+HS2dZM5Ha5ePg==,type:comment]
-#ENC[AES256_GCM,data:UbpogktVJ4eYcuKRT3k=,iv:vJAn834S7Gj8VNOJPPjlitGlTzNEa5eciyPhcxbl3bM=,tag:lKF3Kr1EKa0w/KvCVEeiWw==,type:comment]
-PODNET: ENC[AES256_GCM,data:mQjbk76xLoAPuVxD4w==,iv:H7CYv1ScK5zK9QRIYDnYqu6V+TAkvsKdTpqaPbeIZpE=,tag:RIuD9COBFWF9E3EUNTPpFg==,type:str]
-SVCNET: ENC[AES256_GCM,data:5zPaz37USUBDLX5f3g==,iv:mGIu3UQgXiqzBfprAv2BG+hlD+ZE72U90sx0WxUo1a0=,tag:MIU7nzVGDUSuL083+aF0Vg==,type:str]
+#ENC[AES256_GCM,data:AeTV9wTicgjdA/Wa,iv:NPpebygVw6aSf9V45En/vzxdjaMJeCpO8tqNinkyrn8=,tag:OxmpLnSZFBvUrkcWVPVsMg==,type:comment]
+PROXMOX_IP: ENC[AES256_GCM,data:42CVe2Rp2ujnVDw=,iv:IkSULTlI41gyGzDqNnt1m9RadQUFk2Ii3Bst2IERzQ8=,tag:y58fnKoDXWGiyHDCPCGEtA==,type:str]
+VIP: ENC[AES256_GCM,data:fXP7IDE5qDrsa+U=,iv:/rfVCDi4j4pZ3Y4dpl0gfM2ESto9eoeu4f1W543TL04=,tag:qx4TAFq0ahnld+vylWWSyQ==,type:str]
+MASTER1IP: ENC[AES256_GCM,data:HNGVQ4yFkJ3MdaI=,iv:sL41YQZjVsAWINC2kbXYkUDWDc2OtTMYe7qYgttWy+Y=,tag:bmjVzfrxW3A2x9155V6OMQ==,type:str]
+GATEWAY: ENC[AES256_GCM,data:ILmijAEajyI5YQ==,iv:VbWugd4+zYIa5LqdaaW6T1/wiJtkUAiM7kFPwDtdOAM=,tag:fuYm71TJeReyQcIntvfkfQ==,type:str]
+#ENC[AES256_GCM,data:SVNOVAV7ZS2hZio4MvC4,iv:qR2EpKq4xD5I1ABfHajmq5+ERP2eIEqyupswoZpjWmU=,tag:S87lC2s9tYGprxP5aa/RSA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:Quy2O4Bcnm1oHzxvnZ2HDvAur2QgYPibLg==,iv:I7LKK0UYJOqliBg2Q3SMUQWI4qTIPNVOOQHKPnsL9+o=,tag:eeGbdNwA1siI0FPSTMnxdA==,type:str]
+#ENC[AES256_GCM,data:U353O/U715YtvxgdyH+svn9GL65rpDtgtQ==,iv:QH2bdv81Nw+ovWJkd3yd1cp3VxJWijq8JSVY12IBeUs=,tag:7M8e4Ehf5cJ8lS7JRVJPJA==,type:comment]
+NGINX_INTERNAL_IP: ENC[AES256_GCM,data:BQx4KR5PbBOV3yCL,iv:A/VKMk1JqtIfnG0PG68ww0E+59bLeQsRM4PbRhShw9k=,tag:EotNXvhAVYpuXWtE40RXSw==,type:str]
+NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:gyswK4WfF3fVFbDu,iv:WnOEsafojzyKh/3WJ7ecOEmCqPBG2yeT/kU0OeCPyus=,tag:gSOnz2zuz6BKZEoH2XfX1w==,type:str]
+IP_WHITELIST: ENC[AES256_GCM,data:H8j5Og1CRKFxfk5OxQVMRZ1nYuelXszQnbY=,iv:m3uARD/pLHBuyD/FaICWWXr/EGO8l8Ibn65U04hPuCE=,tag:k8DjjVot2rrT1PAjQgDjGw==,type:str]
+BLOCKY_IP: ENC[AES256_GCM,data:v4Lbu8MKjPNT2uXC,iv:QTq6eyvIxJIMP16IF5hK8P1xgKBebJlRDiNS17XPZRw=,tag:Jh4I+SF4lk5O5x7TrI6c+w==,type:str]
+DASHBOARD_IP: ENC[AES256_GCM,data:EieyM9/VdvAW45pY,iv:xKNZoLSDHtFhYvsyszFFs9Xw8ecibcpzws5sOKnC2yA=,tag:KIpfgLLhCzfS4o9LAIe2IQ==,type:str]
+WG_EASY_IP: ENC[AES256_GCM,data:B9iXDDErwo6VvDiJ,iv:ZIaMjFRXpYw1HMO2w9YkHaksV5+/EH+mp61FFgQZzME=,tag:GYZIK7lkSF8ZBt/yMHjIIw==,type:str]
+MINECRAFT_IP: ENC[AES256_GCM,data:clN2enPN2AIErPbz,iv:67Yydyd2gkVB4v4s7GmXQ6JpDUJ+Q07DYUJVjCXrJpw=,tag:mohF/tQSp0RvZdf/ogDqOg==,type:str]
+#ENC[AES256_GCM,data:nir6aNjdPVJCISJ2IkS3XUj6,iv:uJ/wc63DdCYzeAjURIDJ034RNLCfbPJGCAPjJJECPpA=,tag:7JP9c6fL/q3WWS0EJ7/ZCA==,type:comment]
+BOREALIS_IP: ENC[AES256_GCM,data:Zer8eMWlMU0sP6Y=,iv:ueTbUTp5rtg8+SqoQEaK69WRP//6mYY45v4vzlorJ/w=,tag:oEz5PpB78Lq+Lr09WU5Hwg==,type:str]
+#ENC[AES256_GCM,data:mm8EhsN7NY83N/9yRGLbBQ==,iv:/AvPQ5TOsR0djY1CkFTwnx1HmUBf6V3H9TCCVRqgptQ=,tag:wlCctzykVFuUTLek8F1GIw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:04rVptCE4Zo0Qo0zMw==,iv:I28EXx7HZc50OunwQeYXSYQ+oe6lt3uYfp0pN0cBvsA=,tag:u+HDaHznKznbh4Ab+4KNdw==,type:str]
+DDNS_URL: ENC[AES256_GCM,data:kc29FEoNyGS1Cje+O66GzKH/8c0=,iv:JoPp8JRgQW+1pXima4KL12ITSEL+TORF3fUhiO7JLCU=,tag:q/IhCMkZt9TWCMwbj8GnVA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:tJLCLaVGOyNeHPN/vpq81xc4hQ==,iv:C25sqYz82/VMO7T3FXM57wo5kJHVLLu78Va6eTcku6c=,tag:mvswX/UCZkOw0f2XreqHlw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:o1mE27JfNR8aapz28UHGNyb8Optg5boCgsIH6Mh5Oac7hnUQECyitA==,iv:zDZzkf2zzqdD9o6NMzvOkaKbhq2A0Sfw6pAbrhtD5ko=,tag:An8737AYVSb/lza1e63TIQ==,type:str]
+ZONE_ID: ENC[AES256_GCM,data:1juXsrlbTB6HgKG3Kk1Ln0kPJQLZ9zpY7G50clkYitU=,iv:436c/3fT461IUBnuf3SvWYyS4tGKFU2xODh2MSi3YBI=,tag:tL8e2+jIcw9sQHgMxhKvvw==,type:str]
+#ENC[AES256_GCM,data:EeKvGyth6+Y=,iv:rohc1svxz9dhYQCcRvQ6m13/MPWspyXqwVxMRlU/I60=,tag:xe9/KgxdKF8Y+tsTIreERQ==,type:comment]
+GF_ADMIN: ENC[AES256_GCM,data:rDW1s45mLpkz,iv:LummY9sHvmT4FGbUAxwQz7leCprhPEj4L7SMD8owFxk=,tag:XcBjlwg/wUvq202T7C5D5g==,type:str]
+GF_PWD: ENC[AES256_GCM,data:zWEg4zK1Qd+W4Kf7b5U/Ove5LQqW2o5V,iv:B7p0HtKeMz7pcCzIkjbT6+0tcuY3pIgk+gMgR7nz2uI=,tag:0AH2A693hHUXPeGH0M0dQQ==,type:str]
+#ENC[AES256_GCM,data:/a74kI5Rsh8vHg==,iv:f7dbOjORwYi77iMrz7xyPOz1wHtHqY7A3pnKq6iKDkE=,tag:WrvODWhQP+X/W6w5nqUYxA==,type:comment]
+NEXTCLOUD_USER: ENC[AES256_GCM,data:IZqMLekQHRld,iv:KdW/DMCnGDTjac6hWLKF/emO9TVpYAh8qSiP7ZHPgY4=,tag:+H00mV7pZ7gC3pMniJsEJg==,type:str]
+NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:9jlTiGfRZy2rhubUg1AiB8jFrbU=,iv:RTSMgBbLmCO5epS5urlqNtWDZ9pV0L2zLqxW3Mjd+3k=,tag:5MC+iGRrd0QvcwtpsDzG2w==,type:str]
+NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:rgD8JaNoDHnUh9RnH+ELEzYxcxKIVPqB,iv:gjLGYt2TE2vw9Ghsri79GtA5+HQirvXzR9IhqJR2g4U=,tag:vi4iPStzGnn7CdMDB9l4PA==,type:str]
+MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:iZiZJBdOVwnMaUSH4QT2ffj6yQ==,iv:UG7lsmgqI06DKmLqdqijJWZq74LinMBqcRwsqxQiKIM=,tag:0EC+KhouBl1JvCK0hPNYrg==,type:str]
+SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:ugReczxAZFz6tebXOccgZCFm,iv:5H1QTi6YC50rx0v9m6/KQijlX2CvaWBmleHuPlaQBpE=,tag:++kBkhjxvKBi2YrNNvF4iA==,type:str]
+SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:SXwRPCvIpAQtyOCJ06NvvYzTDhiy6/A=,iv:i8UoRxIoukTJC8ZNXA6QF3eVER4W10HSEnexU9muaQk=,tag:VpmxCijvF4PGkc06FzXU8Q==,type:str]
+HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:YHBKG0pKIoeESWNVRdESW3hWTJPboC8c,iv:7lLB1QKiVmH8LyhV7ohewIFsvan5rbnDC2W7yrstqos=,tag:SZT8l9dPJowffdxd/dZCig==,type:str]
+SEARXNG_NFS_PATH: ENC[AES256_GCM,data:3mwGTb1mPRuTpJhjw89OFESWegcmJ4W+,iv:N+6fL5ihBvd4HrJS47attqOPD/p7EWDgTpd1HHcd+Y8=,tag:QFDBnXU/g7cF+GD6SB8wVA==,type:str]
+#ENC[AES256_GCM,data:Jhwzs6rVtNOZyw6iCCb6Sro=,iv:1Rij49zBSgy3urn9IVFIyw2m1+LvfSF1ByQ9D7BUIhM=,tag:MbquSpMKJCNo07Q406t4sA==,type:comment]
+METUBE_NFS_PATH: ENC[AES256_GCM,data:V2JXg2UV4AdAn99iHw0bI03uh3CFhdvc1hA=,iv:gKrtbhZbxPlwmOE7vjD45VST8ERSMYHtZOlVBV91NHY=,tag:FCimUs0TV5AbibStkr7GDg==,type:str]
+VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:XX5TqAGINcRReR6XfPyXeqJBzFqfLgRIGq3pej7BVFtRAV/Y13hO,iv:PE5b+z7UPEkkvomj3SaFoDJFNxOFDBvamsiRJsitsUs=,tag:cO33mHrouO5Lv0wKjOFNaw==,type:str]
+OZRATES_NFS_PATH: ENC[AES256_GCM,data:/SolkLbgOqOB0HVV3Y1jOvhtdA/RHs4eF+DliNU=,iv:/ApGFUX1uSZnNJTcs5VXYSFM0rRLKwaHmX0iDNzrSCU=,tag:6UcO8GS+c+CsR/538q4oZw==,type:str]
+#ENC[AES256_GCM,data:OzGh8hYzqjWNmdgWIlWQ7Nrd8YWdy0oV1wyhno+OyYK0vnHy0+PWwRFHo14k8fM26jELY10Rabk=,iv:indA0kpFBnkMPCVDoBiDaXN8GQaR/R+YIrOBA8MMy8c=,tag:suh53ij8lNlh95BrSPjUfg==,type:comment]
+#ENC[AES256_GCM,data:jUDprzAwqnaZw7np/jPL7F+4ieE3XRqyeQ==,iv:2uKHrCCNgUZkdlQSXCBrFmvVYklEc/XUKQeehQFAcqg=,tag:EyUiUYWTe6eH1BH+3S7zVA==,type:comment]
+#ENC[AES256_GCM,data:tKvCx85I2qofrrIVDvRjXSRj2YqauPUMMhyBryvcrrTeompJ053zIYXOxkqwodfZeZ611oejPmFtMKlwsr1TR/KNiYAiitLcBXvsm28=,iv:Q9gQNTA1XVyUd/UpbnAnHEN5tlRC23UPMJqg9FAugVM=,tag:IshnMvtlQtBm4E6ye5TcTw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:23S+mxPPgRf/RoQboZw8MhZMrGbBcfbtPBb48Wlrcx+wYb7NVgQfqgVUrw==,iv:ek5ztZD1XcGG8tICvPTHvjROvocEvV3Kvmp/mTbYhGw=,tag:VS5+/s4j6zaC6KUkeCQvdw==,type:str]
+#ENC[AES256_GCM,data:U2I5LdE5adJ9mOlohzAGufnLT3k9/7pNlVNxSpuauq6jHEnaalizWPSDFIX2cplO+juC0PIchNn/uTha1XYnPanegGj7jVc=,iv:sVab0jFyNGsYMSc92gXJStEODbedlQS11z8W3cSquXU=,tag:3R75kHpdj27U1DgYxZELAw==,type:comment]
+#ENC[AES256_GCM,data:+UT0LeXSIqJsIhAhQk4nvOpLPNoNP8tMRgLuIVoIKiQpjQSGINiNdZiaGhHi7Cwgko2pbZz+,iv:5oLatcukDquk+wx4sT8cKKXkxUkNVKeq/j5K70TfsSg=,tag:4MvFv8iy8q+OKMap7AVGsw==,type:comment]
+#ENC[AES256_GCM,data:ZiEs4hdmXWfBgbLma/KDFKx7PWvtkKVpZ4Vk0FQ32N+e1zE=,iv:gwo9kPJQLMG4DwN7JGsGLJXQFtefdEb/bL988hNtEm4=,tag:xG867+bgYGo9YYGMyf1KgQ==,type:comment]
+#ENC[AES256_GCM,data:iOsJkjj0jeIwcD3n9d2hmD8p8GTW3XOy2ifBQzSHuCHRu9005FXQ,iv:u9zFscW6Ehm1Zvg5IMHcW1ot1HAszq8j/vrjXf8ESpY=,tag:Ch6j1TL1rKGok0+/7RsupA==,type:comment]
+#ENC[AES256_GCM,data:Crp64utf2eReZja6Az0=,iv:OmCRvLEGEN1JRjblh+Kg9eaA4AMVDsKQKseVEi9Yy8Y=,tag:TuemC3MsPYe7KGJdVEVWQw==,type:comment]
+PODNET: ENC[AES256_GCM,data:FfELI21gD1gbq66oKg==,iv:Wzl+lhIceQ0svHYUfy94PKNIc79zfPY4NXMOkK8g24U=,tag:2B2PtGTKPjmLXezwmJD1Hg==,type:str]
+SVCNET: ENC[AES256_GCM,data:a6noIuSyFEGCPXVMRg==,iv:jv6VufMnJxy+FFrsdfWlCF1RPPrxEptCkicuiyHNHM0=,tag:E3nXZ5NG25LKfDraUr76Kw==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1M0ZRRC95UjM3Tm9Ka3FH
-            elJlcHNGdzBlMjlNRUlOZG40ZkF0L3dNWVJjCmRoOU1NZ3NNVXNxZlFkSjkrakxx
-            WTN0MWlHUnVQQ0VwejVDZGM2U2Z2VkUKLS0tIGpVcEVDMXNxQXlzOGEyeGs2a1Yx
-            V3l6dE9GK3NiK0h3eGtTaTd4dDFxU2MKPObc9DqQc+mdRpzAWpLShick5edhGGkS
-            48yoNuxZxH4SXWJbAGBUz4zJu1UiQ1bWT1A8s3thwDULHoMk+ZN9QA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNaXVacC9QT1MxWG1tT1l6
+            UVpWcERDSHpXS21hK1NGMFFrdDF2aVZRa0hjCkdRZVY5MXBCQm9FdHVIUjRaaHNW
+            T3pPSFJYNW4zbDdwQkg0VjVSMzVnRHcKLS0tIDNRQzNIamxhUTFPSW1IM1NSVGpo
+            UHFSSUMvY2dVV1JxMnRKQURRRXJFM2sKikH6iA2Ms/Cpma9StFIvQZeZAxEkFzxj
+            8qOT9MPowZSOLUt7oJx+LR1/AtgejoOcPweHGtwn+iL/XcFS0/TPuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-17T20:39:04Z"
-    mac: ENC[AES256_GCM,data:FQ8bA0yuYxI5/ru8VeEkKCgBdegZAChzEDcM6tKavi9KzKRBkVtW4s/Ge8tmq64Y+W0KoJSD8il8PVisnVxELwN13b3YXUutkxq/l5ewmzMO7VhdlAIKD2PZRDe02BwVyjqelUar+Zfou0fsFoHuMV608CdLP3Ar1RphKPUNVu4=,iv:5QpPfjdFXjxPj+59yG8rjK/mB21ZaO0rbMSfRZ1vY48=,tag:zQ4KL7AnR0HRzqLNitvZrA==,type:str]
+    lastmodified: "2026-01-25T14:44:25Z"
+    mac: ENC[AES256_GCM,data:RizmMSahx5nKhhYSZhfAe7gqpO4LKuxguYvlUx7oipz401/Hn9TQJVZUYsuu+48bzqAuDsGAL9rqKAQli49tvTXkOZ2dP9UqdtTJZHxMd5Zh5mQGHmPmge/FRc+YMYa/VVATwm9UfDaVhkuspor/+0zVeesWdGRwdBEL9z29d30=,iv:kXZB7D/+Z4GZK7r6e8ZEGvOx/C0hQChWM+Jm7f/rtXo=,tag:eriypntac8IFbOjP5vnPCQ==,type:str]
     version: 3.10.2
