--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,70 +4,70 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:v/o+kWDBt0BZi6rt,iv:xSfs0g/pUt/gIuj921KpczfxRNwZYKXh7eCCfxq+l90=,tag:fY70K8oGeyoIuE/iGX6LDw==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:5TwYzRdJa9Rgpg0=,iv:83muWZcZXOhQZGkeagXj3aVfbaKLcRwVgEfODnsdmNU=,tag:tg+J64k3juLoWTD91lGxQg==,type:str]
-    VIP: ENC[AES256_GCM,data:BSAnzwY7hsz3iR8=,iv:sXs0pXc9O0nSi4IBepPwgBd9HNwBOWfj9/nO+XfXktw=,tag:AOOKGbk92Pj+xgajrDUJJA==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:zwTyowsUFLAVdgU=,iv:14eTy53QR7IpUjSAnuZnmIs2dj8SNZMkMLY/+tGQxiU=,tag:h8NHTFGLmLID5YpUHWBF6w==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:OroChA8ygn1Gbg==,iv:8/Qzk4YpM36y9oPli5jeuWn4T4TsVFJYetkUgJTHCc4=,tag:kZbBDePwuKUZKOOKd1FgpA==,type:str]
-    #ENC[AES256_GCM,data:et2/pZ0reTI9v+GxOq8Q,iv:Ye3p5mOH3RwEgak9Wwdb1NhpUT/nelNqi2430wDBjbQ=,tag:butH9/Kydj80hnP4q/5WNQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:S2o6aCIzCKuSdpl4C5HjVIYawyKdot2MLg==,iv:AmDb1geCSbt/90J3WNxaEahfKEDeYnczdZ2RQ5x8Ur8=,tag:FnNxY6esHQZh2osCDbXIWw==,type:str]
-    #ENC[AES256_GCM,data:uEsuP48SgVYbRkERl7Ax/ngBb4V/JvxFXA==,iv:+3YXP7nX4k9lih/6f5ldB+fgLwJXrD06tnjQZDvQHOA=,tag:SzWjp1rKhSt4NefYcsMDlQ==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:b/BngdGrLwdhWwuw,iv:zhR0z2X88W7u381labGawMXb9QM//W4HOBt3Op8zYt0=,tag:6uXpHyPMXQn5O3nvNQdQhg==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:cpwN6PWgfl/No5pe,iv:2Dcru8XQ5Cmhkl3G7k+acW/01EcPCNBmxSs67Qaaskw=,tag:YbDeC0B/LnkpISS7H9XtFA==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:KNaiXySI5aN8SZTBoO32Zd7CDhaJm5H3STc=,iv:fl99BcFbW11aFV79aH2C+ZqzdFOn5o8QhhrRgqpkk2E=,tag:bZifP3xIGrH2OlgLbgWF1g==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:2IG8+IAh9Q9YT2Ri,iv:r+f10VW9JXrehiAXUe1wRWWfsex0E9AmzAaGBsxomr0=,tag:0C3nQ0kIkFNVWrSlwS10Eg==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:+7lhEDyy8Jjls5b5,iv:kN6FOw12Z1Lg1I8qhDF9q3FlNIow2jbJS61WZGQsMPI=,tag:GFsKzZz7Ed4WNAGKwx91vQ==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:q4e5KpoCiuBsuteL,iv:/JgDjWe4Gfn52IA33rGmK44ASKAtEM2wijcRFya7UY4=,tag:MzZBFo2NxtXBHtRvzTnN2Q==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:gA0VRg/MotyoVr0A,iv:vKdoaoceghm8Hmi+UWcUwWN6IXK2tccQpKL78JmSKxE=,tag:jjx2ZBQCISRoUfaOyC9r3Q==,type:str]
-    #ENC[AES256_GCM,data:9ktGsfKl+o8DaRk/Etr5L+TG,iv:gSbQU8w2B9Df9ZX8bVoSYj0AENnD9pZRNxlyLhPs8XQ=,tag:PpaUGBBqgQgSNGKdaDrBdA==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:O4j8OzCd0DTgmwM=,iv:wjWZ3ixLuvDoqHXUhLAXaoWCIXokIFAI9hySObS2ge4=,tag:1580l2xOWmjZIO1iZKVYdA==,type:str]
-    #ENC[AES256_GCM,data:s8ez/WAFw0lu2w6pKsstXA==,iv:tYdQUQgqJSr/dT/jKUMhjHzP8ifGjp+hY8VjywpzrLk=,tag:KwWG2ASCnMSJT7KdDsswXg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:P2hhNkvy4MDWhg0e7A==,iv:sfKWKYIlYyxgq0VkP0XO0sSAWXMJ3ub2VPH6c7I+ue8=,tag:UnH4JY/Z7MVyKTskNUBIbg==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:nNeXVip+5taz8lMk/y1GhbjBbVg=,iv:lpQAbe2HguYagZcrI3vG0cEGiGG9PpDbMs0KZOd5/gE=,tag:qLYmjmvWJhkMzNb4+iIxKQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:SGcUf2I6g9ILjMe+NIC8tdHwAw==,iv:gzsaTQkN9qx/DJAqebfx8auOzDc7SuQVzAh5XYFlYvg=,tag:Bij1xqfbZrQZAAaVqo2RdQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:lblNhyX+KOAcfrWg3alvuzSbkNfQIbzJ7YH6+otTW14HRQzhSPKoBA==,iv:Ri7x+NagI0YJTD1vrHZAIsF1uhQziUPdPJHUY+DZBxE=,tag:rKn1vM/hnsP4R1XCzm6drw==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:g64sarwnpbeiJr/XWK/x+I1ISEoNZa9A1MyAZS/MKSc=,iv:+41mD1VOAUvuoi5lXeLDKN6tMXoeQiR6nGSyG/bsnTI=,tag:bS/xtLDkf6CNZIirkencQw==,type:str]
-    #ENC[AES256_GCM,data:A4WEDXhjHhE=,iv:MM5NptO2P42qJxW9Rvl41rWVc81SQy3amzghIAXp9Y8=,tag:MA9PIvLAfhpG3KQ85/aQww==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:/XXlIgsxoslG,iv:mmC6CZfAy7x6jBGPPfU95vU318yKDZl4oNsJcIrckAs=,tag:U4pAOkQxJOud9cYy2iBRXA==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:eoVm3/H20kdx3NtfKQm5Yv1E8/7mQ0OO,iv:JSXcgt/I0dI71g87B8OctJeRxgNTcq3WoPxsmEpx2OE=,tag:DdiubGE261J7YavhS6NSpg==,type:str]
-    #ENC[AES256_GCM,data:cqudf++Fsy5ZqA==,iv:6HM0+T/+8cUB3mAGuzVhMaxdnyNE9zeYzX47WjoGHiY=,tag:sfVSJ8WEqTD5sKZcUKnHyw==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:+58Q+j4+s3nF,iv:xOvwzc7GjGg1lY74bUnx9adq9a/h53YKSdMRMuQlarM=,tag:N7e3ikHvQUSan0aZQAOtbA==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:uuPox1VStlGNm+dHi2BoA3+NdkI=,iv:gq8muTu5TFXOE4eR83YN22CzROu3FNDTdKr1GRbOjx4=,tag:+q8kH6vOvVa1XLf/Law+Xg==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:r0gwC+ZiZF6d2AtoKjXwHGWepRsZiWFD,iv:AcE5g3ZqUx+gmgK8tgOf68Solz1c8DswKkK5Rej/iYI=,tag:jrdwXLsYgmAX38qzgrU3eQ==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:qyQLYQ74d9bBJBPHsmv9PwCsNw==,iv:rM0FQRasU7P0645y1x5GhC55KXAcyGqwO0j9gOhOBm8=,tag:oJcSbQQcfrgdZYV6DArfVg==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:E0pmcaAdsotgoN3ZSx1BNUXP,iv:eR58lyMyumMVIL2hL1m1jXOK1tIoAQ1DmgnHHM6DIpE=,tag:Djc3DeFD5h76eJDjP22Wkg==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:D16p2MhkZDpkTk0S3iR9zi5lbCqPoBA=,iv:qDkYCtsejwtGz/rL4qjC5n3oTwq3CxIVcf745vte2ZY=,tag:uQxgxNDxwtmMmrwcTpuz6Q==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:4NvasiqqxBuzE/uIO+tUJlUiPYrHgxls,iv:NupbRkjtQcaTRVotvx6Oa59inXLH6bw8lATszfI1PX0=,tag:kus9+tee5c+bVN5s1VrDcA==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:Y2JIMS8YY4uWjbGSRlXMhsjOXgMeB9OY,iv:TdC9q2zJ7/BpW/X7kJdlOzYDD3WUwin9gu3Ifv0PkkI=,tag:Fd2uYqlYbEG/JAOTXHh6xw==,type:str]
-    #ENC[AES256_GCM,data:s2HNZIZLhqPClPgyYcqU6ac=,iv:30f5jKPInJdMAaBSMaLB8vr+sKBxzh5UQl1mkmKKUr8=,tag:bIPL9x6j1jvGgCpsns2x3A==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:S8e9RBb59jBVnkQF6z6xAX8B+3v7fIvwDeI=,iv:0Y7/8QhLzPfcU2WdkquQQcd8ggOJo64aA3PkknVP7No=,tag:1Py+AmPEmL8mtYY64L7Pcw==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:eOYU1gxBPUQPw/R41l5pjY13PaWqAfufFn0MFMrnIucM+4KeW2eG,iv:MMqT54hNm4X7zuZdLKV38Fkg5udGIPh4Ibzkvgaq+U8=,tag:FG0CUjAOrsWG+YoyoIuxFw==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:s95Z7n8k7zpLPYC5cdYJnjHfq8ukbR26l6QVSss=,iv:Mg/Gtu8wnbrGkrQjpEK9R53UPD75pST8Dl2GUmpubuI=,tag:BVvNlaGPjXsLlro4H29KZw==,type:str]
-    #ENC[AES256_GCM,data:tlVvNsdtLLNTV3g33wibFylwz/1C2Kd2JV6cwGdXMH3F91KujDmThWHDp/k0NaOgNTc4BtJE5+s=,iv:DbC7WvP/O2xrmf9T4M64AccllMUhQklBLV40U1tkCI0=,tag:LPKk+y94M+QULfGGeGtqOA==,type:comment]
-    #ENC[AES256_GCM,data:PE1dJ+g7ditUW00rvoqS7pGG0ohWf3k+0w==,iv:LDv8zy4Vo4CorTguVz+M20kzkvw3hnhtnSG8FZ4KaYo=,tag:hYIzvdBHlHVAwGYnP4FhRw==,type:comment]
-    #ENC[AES256_GCM,data:TRUaORzoQYDpmYo7z9lyUNcYxMzI24P2k6ROPhxP2C8hnSdxgjUnQv/5cZcbsznmJe2VfIUVhjaMb3q/k8nlZGRvmkWBL8FcG0MSkwk=,iv:xuGE2S7dJRp06apd69kgMGK9GtnIlIofWuDb7JoYSDQ=,tag:sU1gzUQZ8c8Ba7DxsRfiDA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:9HeYRvpk3Cs8Pbd4C1mpAPe3DwZIpEQ5Bp6OZ9MDLSnBGtjYfVmMONjgww==,iv:qyr223xjg1fwu3Am9ExVMtXPi4P5DLPc9wqthNx3NAw=,tag:/OXDoDzy/w80TYnnz1iibA==,type:str]
-    #ENC[AES256_GCM,data:NEinEactmMhwa72badyTp+Lx20dtZ3TzTipvtXpditLwtSQ40c09pgjeTDs03Go8tNOvKUKO92lol8WrVFfFJQOm5aOFyL4=,iv:/68YLI2qXNVvxsJ7RVpCx2iZvKExH6PlCtyxNaQc2BU=,tag:xVI+apOWjwVHOtm6yIiZsw==,type:comment]
-    #ENC[AES256_GCM,data:jUepugONKnwutDzJdBux1nb/YLOBdb+dSM3P29LU8kbyIloZpJsCsZkjsgLR2/ai/z5B4wwS,iv:4oUNJxsYWzR5RldzxZEAr0tCmTrskUsuXNahQ35CnRQ=,tag:t/E9HZCaHl2BjmTHDzE+iw==,type:comment]
-    #ENC[AES256_GCM,data:pELIDP1nWRhfOnl3jtptzxjNH1YLmkGrEaCS2Qc9an6AHyg=,iv:fspKQNjh2Jv+tM9RSF3EtPFA7enkpEGBiu7HFLfh/HE=,tag:d6WccUFKVXOKerx+L1Krgw==,type:comment]
-    #ENC[AES256_GCM,data:i2esgMbqhpOIH3kuCIzdkGUhBiqiK0P7y/Ol7MTa+XYbNE9sW59h,iv:pkrEhg8cnhZqUypC/cAcTVeiew5YijrDr0vYk8X2nVg=,tag:IHCK+OxffqgLrUIzN24shw==,type:comment]
-    #ENC[AES256_GCM,data:ZGWncVX8WX6RsoNHvwc=,iv:B/h3qsiC2eZZx7Dkmzu4oBumFS00by29kcdqtmYYLRM=,tag:7S/zR3sL7chV8vmG41NZGA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:4qMjOmaUj2KFCcR76w==,iv:YH7cAoFzWn1WjP80bWTnMD/0GGPzqAp9pYhYR8I7T3g=,tag:VvAZoHEmVNbjLlJlO4SfpQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:vomR6tK3f/IzfwWdBg==,iv:MU7m5NG2ztqoymAYVLAEMubPMyv0vRIEJ47UGwepwJw=,tag:fnpaRoShhz6sF3XkmACHeQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:fzLNmQ==,iv:uFFgkFOtjZSP9qZRXIaAmgu7oFm9iRC5BuP8zLE90e4=,tag:dQuygUwdjSupDjNsyVUZxw==,type:str]
+    #ENC[AES256_GCM,data:98z6WRzIDoZb2MSO,iv:fb1KH2etW607XKOtB415111BFWvDyfc91tc5KztG5Z8=,tag:Po6EFVdy/WSJcRhFIWD/Sw==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:v4n6fXPAJc6flmY=,iv:n894zVEcM0o9SwfCjRr2aMxCvbIbI9t6rQ84tXxrJD8=,tag:0Ryhi6NDAHwtcG3zuUq8oQ==,type:str]
+    VIP: ENC[AES256_GCM,data:6FnrIQzZj2TnE+A=,iv:R+jftEH8sPyHUsdL9LRKK9O8+/xpHvSzXB+Bhl4NROA=,tag:QG+VE1JbdxKeEWXAmhFhfQ==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:8RsO0Sg7wewselI=,iv:WqjYq5kW+nxvGJt4uuJZ1oVeGbZ7T2ULRHeizSP6j5w=,tag:lVhrQgfM8JRox7It2T79jQ==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:MNVG9Y4Cdk8C2g==,iv:oahcCR9Q2wW+PLl/DdyZz3z3yTzlHciAZKEQEdS3ud4=,tag:W4vEzppNseHK9XrERTL8Zw==,type:str]
+    #ENC[AES256_GCM,data:rYclHUcc4Zdouck93fat,iv:TsgQWxi/uUrcEpcNjEYh77XFK6lGdfOHNhLnyABQMfo=,tag:oAVty8kzrT/FSKeGuqx4Vw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:0Y6n2bp8dv1/vuX3evlp1Fka+Uzrj9/79A==,iv:Mob1cBHHbBCoLc0Xs3gQxIgJmYtN3krDgmTxPaxIdxg=,tag:Hbgj+wTIUCsjlk2F/95pqA==,type:str]
+    #ENC[AES256_GCM,data:b2OYgnQy4bgy181JIkr2G8+8QdjWWMjLcg==,iv:NnRw9VSvFRvMlApIsWqVl85ddWWzmpsZUvQ+JHgT1m8=,tag:SujKjkI1ec4xQaYklKfesw==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:Arln8zwY0UdtstRB,iv:yuA6nQnEOixLNKILUwnWwGsEYhFOZB/y2byggTmRfA4=,tag:eGHix/U+pC41ul0Hhqv0lA==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:SRmR+l/p/fiwb3kg,iv:io1HywvuegqeXAMTPkWzZqRfIuy8swTCQ19siz5aRkk=,tag:sifp2ZXUEpWG+pnlANbbUQ==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:LyGZ9QEWVymWLbsWCfFPs5L6EIOp1GpF6+E=,iv:f2Ukt8svAyBLlXm3TNX1Y7+IaIPhTm+qJjuYUtm9RnI=,tag:hd4qcAUS+es+jWLEZYSAKw==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:ZbELTqqFQLj/I8Vy,iv:EEuOSl3VBWQYc1UrdFhjKtwoDrXKwI6PXedlLvlI7zY=,tag:w1zjlW5X1yrOIS6fp4XZAQ==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:mPuX+OQuf2eON8Cu,iv:AbMwPidzZE+PSl7r7mknuQ5D8Rut3sWv+EAlLXAoUSQ=,tag:nBI1i6w/g4H/beDWaxfN8A==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:cDnDlNiH20PrX7Vb,iv:eA7zLzmMxgIEjVkCW/RtwWXog1QkDq9E3mfkpYaovA0=,tag:dOpgsghUtGYWvIbsTL9F/Q==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:Og/Czfcq1ZLHe4wz,iv:rj+UN3g/zB7iFC83eWKlhOaiVlz3PCIEXNDWkTfWb1Y=,tag:ml4/Yno9Xd+tLu1JYSxDIg==,type:str]
+    #ENC[AES256_GCM,data:7AtfWwht0Akb+57Opo+6f3mY,iv:FUwD1XXyTE0XFFbnLQDNy/KvOo8uboe5LcwLb9GNofQ=,tag:qX2eNLll+xFn++nO6meW2g==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:xvHNXUe+g4Vtaoo=,iv:S3clROeH0R/AbKDU5oResnDsXYtF/ZkdIRCBt4BzWC4=,tag:QrNXXwGXOkYssIXPT/H7MQ==,type:str]
+    #ENC[AES256_GCM,data:DzHkggaEwHgHJQ2c5a78cg==,iv:emLRxTk9DZaa4BVx8r9xV+NhxuE8X153bAhVH1rcDWI=,tag:Zqd5C01hQWAkx411uWUITA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:S1pq1mOrF9gx6TRnfw==,iv:N1Lm1VIZ41lhJYzzTKOEldJzmJksLQTlngCQWYGRcM4=,tag:AgCC7Uvf7+838/AIu4btTQ==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:l3VC5W5fm6XjZHPra4CiD72rslw=,iv:a/D7bGexxzMSc34bRaTajuD9aiE2O7AHU4gUhMrW478=,tag:Tu3RULMq2mXi6pnhjcaRtA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3ZNHJgaGc6CHbF1L3nIr06Ap0Q==,iv:+udbS6p65zIx/RljviPkEVnhEqrfcyrk2b2BVmj/lKs=,tag:qN2bTcRKSthD7rlyKkLsdg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:IA781jMBKa6gCHnbFRxXntt3QLsqmw2w3I5LJ8ADwVl1KNGsKOLCow==,iv:xLJIgiYb0kA7FLChB9KAP/WpkeztyXCMnUEOcPNU42o=,tag:I/2Mp9dWUUt2K4nCeqM8LA==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:tMKaJxcMBdJfyHv7AjDNko9t8gpYkcwNNxJeY1IZZZM=,iv:qJBwz6xww8vlyNoaL61iMgoCdEOnpLypjp88M51oIio=,tag:Qj+WUj8rxY7IVjpJzhizmA==,type:str]
+    #ENC[AES256_GCM,data:PvLsG/JDQp0=,iv:dIsIrx48pHxmDbXOYnKETtj3Y7j/dfDnJAD/b0ACXMs=,tag:qMTOyN+DcQFMi36ariQJ4Q==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:ztHbL6rib+tJ,iv:4mNFNGnVFZgVbWapEdbuoFBzO+bTtETXhKJRku7hTUQ=,tag:Od5JWCC2VQm8J26q/Yicbw==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:XZAEDaF6tCcAAFW9M2Dj3r2jIJZPupgW,iv:xlfPWnLuDV+Wz5HRCwsvDeqs5csa1NPuOh2IsZJnR/I=,tag:j9BhhZ1+KKnZM7Twx3tKMQ==,type:str]
+    #ENC[AES256_GCM,data:WCsudP1bmhbkrw==,iv:Gs+LfKitfNcNDDBpCYc4bn+9742txIgCQwBEHtNR0q0=,tag:Yz1OuuQVTL7mAjP+tAd0eA==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:1BoTH+DcoNOk,iv:nEMnQjJzl1JDCw/WMDMoZ6EhGR+I0GHszb48CIx+0tM=,tag:RFSIcw3yN2txpq6iPwKm8A==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:E+gfx+L/xxd4rmcz88o2zUcUDW8=,iv:UD8L4D+SdfFSQSXF4+nJkSR4tOEzuV/EtNmW0gXXe6w=,tag:u4wvIDVpCKtdOMAynO8agw==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:ozuNtMLeTdEZ8RmeDmEYGW8NASVR+X6x,iv:kyUzOCVwe+V33cIvY8yloilT72yKXaBoSeXBvJQOttg=,tag:vVxyzu2xcLZt1/T4DoUjhQ==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:qvfUxZ7qgP4m/tSNDe7OClCItQ==,iv:tH3+Ph8krb77H1yPzzAUs2BgNdeTE71S/aSzHIseQfw=,tag:bWy+6p6tyb5ad0pKgLMzbQ==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:DOS5bSKKp8E3qpUABs0HsiMM,iv:f+qrPRZUTqGmUFfYvmkHNXoGDsN7XxXXXeAIc8ynyv0=,tag:os05juxt6j4No660fAjiFg==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:vZzDpxBKpRnSc0mU3GNJC48JYVXtbms=,iv:RByMkFHXPx5es+iDi/HhZ4hGiEsmL3QhQdAw28qbUN0=,tag:W47WR2BVAk3KTDHfZ8/3sw==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:21/jqeFDkExdvO6KYI16lsW62lJRn77Z,iv:anIMBWxZJMIHJYbQZfB/YkQjqU0w7rjH2VfIMSWVces=,tag:Kil90xyYV+5mhzQm0jbp8Q==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:eoTv7Z7WbZ1Eiuvz05bl9yJPzDttXwT5,iv:UGDTqzzttOcibKGHK+S1B9JMgqvLr6djmJ2vjt6eWh8=,tag:8LBnb6Nt+guadPffy9eEIw==,type:str]
+    #ENC[AES256_GCM,data:FBf9d6956p7P7z7B00WQbzE=,iv:W2jJZ3w4NsoGLQ6/IL5/Fm5idTeg4DkY3NFC1u96IjM=,tag:kteB957G4QJIORZoOBRDcA==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:YYEHB92VyaZHtW4OoVWRUBT5xFsEIxwCcWM=,iv:CpTT/AxkTshp7iGL+SsvE8S6e5FlP7aScmX2qU0nKyI=,tag:BJmtlF2gYE07x6/0Nondsg==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:VpFyo9iZffClViLl+nRKp924B7m++8Wh24icyRVqlvhLo17rpQ3O,iv:egq6YRBCCLB0xkUTRd0vi6yXFPn4YWXg/nm2SqYmagU=,tag:WxAo3Mdh1nQJ4SKQGXketA==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:UYgNmQB0r6J0K7xyMZhCcbr5EmPVA6BK6+fQQkI=,iv:lNpbIkvAvmbqkbF/VB1Gp9JadcjeDuN9ywL8RxEGTM4=,tag:qaE20I9Nb47lIFkcIi54Uw==,type:str]
+    #ENC[AES256_GCM,data:a1/N2U7yMMfV1AdgSU11q1MhkvDvyXaiZSUhU7cjfNYn/w9HNpOklLoMyeJo96Knspjy/IULYdE=,iv:iShdoQPDRYvjOEW5c87tB2gYNkxi32FlvYduaHEIPEU=,tag:6DkLop6ngxkaCUCnWrunsQ==,type:comment]
+    #ENC[AES256_GCM,data:B9/seAzpgEFOyS6NPgNBBC7GZNCq8HLG1w==,iv:kL09iYbEHmLuc9ElDPxnnMISKmBjoX0hYgtX+yhIWOs=,tag:qdkEsWT9GEf6yDcsEbKuZg==,type:comment]
+    #ENC[AES256_GCM,data:Pnwz/6Lm04jxqXoIn6TUaQ3yLVsT+Sz1EDOfJbL0uYj3rUwESqFT7moAd/YJowwEwcGPjsa4GGYDEY6FI4dJk+bU9wlqiDxshDk3U3I=,iv:SpTMzhoNf6QbOTjfx47CUBa5jRJfaZ9d8Wii2ig7SxY=,tag:BHrWixST5Wbh6L3UIadMEw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:j81Gtvcq7osO90YfLZOe6WCiJXsY8GlvdfPN/7m+1k0gsDhZnw33G2ICsg==,iv:bQEA5lPU6I1qvx6hfeh7k+SGKc7t1fb2TyUdG7kiNQU=,tag:6UWPcTZEH9PRGAhU1ucp0w==,type:str]
+    #ENC[AES256_GCM,data:YeR5V/9v1sGycf5jO3/y3/vFlN9v09zWg7ZQwo7TcH7A4oagX4GJlj7OYv82Be5IHAovc+ZfzNYJWYE9IvHEMC7U8xqQAdY=,iv:wp0XfneDX4sZYGaWMBRVS+up08eekMTBBBxi4lA+294=,tag:4fKLmqRg8w/O4wFmwrxGxA==,type:comment]
+    #ENC[AES256_GCM,data:/dkmwxQb+uBA++ykGzuT+WsApZ1lVKo9VC8tWIM+PBqmZO4+7gyZvIscQakDSO+TZ/5UkSSg,iv:Vks1O9/Wkh2+zi4/suxI6pZeGcb1KE5Yk67sgKfXF6Y=,tag:LUJQcWPs2/M3eVwcqSegaw==,type:comment]
+    #ENC[AES256_GCM,data:kjTFh0CAPI4UcuyGpHgbSWKsyFQjbpUfrjsOc+kTJAfIB1U=,iv:AtCkkzSMvrw+fl4QEeN6Xlv2xl73b+I9qjV9YJsZRjg=,tag:UpKDXfT0uso5uu6MXQ3QFQ==,type:comment]
+    #ENC[AES256_GCM,data:HRXThZUzpZIzcLErZZ5bitIC+7feqDaTZM7N6TJvrFsxgawt9QGz,iv:uVPu2fHp5o/+woXwrY96z2ZwCpjShDGJwXVmn24r5eo=,tag:gzb0Wc8clFqmIl2MT5PkGA==,type:comment]
+    #ENC[AES256_GCM,data:ks10ZCcwULDaO4di4FI=,iv:F1Q5eyqq2XqgY90F8ZLMzWbZCb6nwX/b4NjyFr/f714=,tag:7KGPA1HLst6lIqwU8DrfTQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Tf+dyMKrj7zgKKxRng==,iv:GzirXijuiGB7IzTka4jazpSW/JOjQSFRAgOsdD5ZeQc=,tag:5IFbLMW/xGSnR+0kn84UWQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:eYbsOF7cApghL/fN1w==,iv:AIQPuu7djM+/IvzEFhEUN0D5DyrbH0eFwedb0mC4x2k=,tag:xu+9x+m4pFVldPhXL8APyg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:1qCi7A==,iv:gcGSUerpRY1kdUKaNAacy/vZHqgE8b1dzIWXIt/pito=,tag:JR/lwYIvg7kxa4Yz5cImsw==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXZEN3VTdWQ2phNXlzNmdC
-            MWxCSjV4VHMxUWYzSUovekxsZG0rSXBiSlRRCjRlaHFSa0hOYW9XRFZ0T0RzeTNI
-            NnN0YXNLL2V3WDB3MU9vd2g2U2hCWncKLS0tIGt6M0tRRHZsQjNhODFZUjRMUDFw
-            eDBzOWZkRnhBQWIrYTlCTUZ3QmgrQ2sKu0XqMDC+VMuVYizyRssWnFpy2+3LiO1R
-            h3bFqEJ4XYwqZanjEOMAi475ZVAqbvL0I7VP/nt0FqGZ8t8FWFgJ/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0Y2gxaURGSy9uWGNDNVFO
+            bU96SEU5TWlLcUR1TmNxMFlIRHFoQ2dmMEg4CmJMeW8xSXRCWVJicnpYRlFSVk10
+            SWxJV1poMDc1VVhkdkthTDlCRms0TkEKLS0tIG0vT1ZhWW9keHl0emJveVk1Sm84
+            M28zUnA1eUIxdEJmTk9zSGhTekFRUkkKVf6dXPFPzfPbH/41xXzz4M7b2ajEeC4A
+            VBAFwr/MfN3bZ+qsVnYtZrPYwqCKi+Ji3DMAN0U/LQMU1DbeWQ2GoQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-17T20:39:04Z"
-    mac: ENC[AES256_GCM,data:DEw7kvQ01v7tR9pAPQ59/9eTwlwGcTC5v6VMXZsbb+Nya910vnKqlhPjEgABBKaPev0pid0qv/1Q/eKgTBomUHY+TqHClh45F7ZOkEP6LdQMnafVven42YjHPZ5P9SMzHFvdU/Vphs86sgjb88ec6Hs93kUFIQY9qH+pODzY4tg=,iv:Dw0yXiS/XxvHpEAgF03J+SL3Osvbdhb8CVMA2bq6V5c=,tag:RV8K+yfwr0GCId+VbnkYjw==,type:str]
+    lastmodified: "2026-01-25T14:44:25Z"
+    mac: ENC[AES256_GCM,data:Noam5scWFYzqxQErKNhNsc2p+eiIBF2+eZAjRoe4N6Qxx6L3+dJifaUAr2pWVi+gkOYSb8Qg7Jhhes9A0JDCagsIZFmC3cmgZKaXXMcMnOfIz/k2VSLwZqekIkFRzexWS9TRKOVfcq8/clnZpX3ljbDDlY5mpwTa+d1DYZ5DOJo=,iv:DjzpkdgGxytHpw8c5un1YYIo7ZwJZ8DEpK9Q2GTlOgA=,tag:QwDyzovThkjTbYR/h5/Eog==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
