--- a/clusters/main/kubernetes/system/nvidia-device-plugin/app/kustomization.yaml
+++ b/clusters/main/kubernetes/system/nvidia-device-plugin/app/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kubernetes-dashboard/ks.yaml
-  - searxng/ks.yaml
+  - namespace.yaml
+  - helm-release.yaml
+  - runtimeclass.yaml
